Refine Spring Story narrations: topic-specific bulk episodes
Replace generic BeanFactory-template boilerplate in non-gold episodes with
phase-aware pain/why/internal prose. Keep EP01, EP04, and EP17 as hand-
expanded gold standards for review.

Co-authored-by: ANKUR KUMAR <ankur0001@users.noreply.github.com>