@@ -13,15 +13,15 @@
 
 Observability without action is decoration. Performance tuning starts from evidence, not folklore.
 
-Here is the pain this lesson exists to remove. Without mastering Performance Tuning , teams encounter mysterious startup failures: beans missing from context, wrong implementation wired, duplicate definitions, or environment-specific code compiled into production. Concrete scenario: a @Service appears not to inject — often the root cause lies in Performance Tuning misconfiguration (scan path, missing @Bean , wrong profile, or scope proxy issue). Additional pain points: implicit copy-paste config, test drift from production scanning, and library conflicts from duplicate bean definitions.
+Here is the pain this lesson exists to remove. A service you cannot measure, trace, or visualize is a service you cannot operate when it fails.
 
-So the natural question becomes: what does Spring give us so we do not keep paying that cost? The answer we need is Performance Tuning.
+So the natural question becomes: what does Spring give us so we do not keep paying that cost? The idea we need next is Performance Tuning.
 
-Performance Tuning — JVM flags, connection pools, GC tuning, startup optimization. This lesson is part of Phase 11 — OBSERVABILITY & PERFORMANCE . It builds on Phase 1–10 (complete Spring development and testing stack). By Lesson 103, you should see how Performance Tuning fits into the observability, performance, and production operations layer and the broader application architecture. Core Ideas Idea Explanation Purpose JVM flags, connection pools, GC tuning, startup optimization. Primary API -Xmx Related classes JFR, VisualVM, ApplicationStartup , -XX:+UseZGC Typical config Java @Configuration + annotations (Boot default) Architecture Placement BeanDefinition sources Container core Your code
+At a practical level, Performance Tuning is the Spring mechanism you reach for when this pain shows up in a real codebase. Treat it as a tool with a clear job — not as a checklist item.
 
-Spring's design choice here is deliberate. Spring centralizes Performance Tuning in the container rather than scattering factory logic across the codebase. Benefits: Single composition root — all wiring visible in config layer. Consistent semantics — same rules in tests and production. Extension hooks — customize via post-processors without forking framework. Tooling — IDE support, Actuator /beans , condition reports. -Xmx, G1/ZGC, HikariCP sizing, lazy-init, profiling with JFR. This is preferable to ad-hoc Service Locator or manual singleton registries that grow unmaintainable.
+Spring's design choice here is deliberate. Micrometer and the observability stack turn runtime behavior into metrics, traces, and dashboards operators can act on.
 
-Once you accept the feature, the next honest question is how it works under the hood. Internally, Spring delegates Performance Tuning to well-tested components: JFR, VisualVM, ApplicationStartup , -XX:+UseZGC Processing order matters: BeanFactoryPostProcessor s run before bean instantiation; BeanPostProcessor s wrap creation. Misordered custom processors cause subtle bugs. Step-by-Step Internal Flow for Performance Tuning Parse — configuration class, XML, or scan result produces BeanDefinition objects. Register — definitions stored in DefaultListableBeanFactory registry (by name + aliases). Post-process definitions — modify property values, register extra beans.
+Once you accept the feature, the next honest question is how it works under the hood. Instrumentation emits metrics and traces; backends scrape or receive them; dashboards and alerts turn signals into action.
 
 As you practice Performance Tuning, keep one habit: explain the before-and-after. What did the team do manually, and which Spring mechanism now owns that step?
 
